aarch32: EventLogBase::print_log_on() is failed to acquire MutexLockerEx

XMLWordPrintable

    • aarch32
    • linux

      MacroAssembler::debug32 crashes due to exception (ASSERT) fired from EventLogBase::print_log_on() -> MutexLockerEx -> _mutex->lock_without_safepoint_check() -> set_owner - > set_owner_implementation

      I didn't dig into it deeply but it seems that required mutex is held by ttyLocker ( Macroassembler:debug32:1651)

            Assignee:
            Sergey Nazarkin
            Reporter:
            Sergey Nazarkin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: