8149646: aarch32: EventLogBase::print_log_on() is failed to acquire MutexLockerEx Reviewed-by: enevill Contributed-by: snazarkin@azul.com